# uasat2-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/research/: generation.py  olshak_fork.py  olshak_fork2.py
python/tests/: test_all.py  test_domains.py  test_formulas.py  test_solver.py  test_structure.py
python/uasat/: __init__.py  domain.py  formulas.py  operator.py  structure.py  uasat.pyi
research/: clonehom_nor4_hmck1.py  clonehom_nor4_hmck1_alt.py  clonehom_nor4_hmck2.py  clonehom_nor4_hmck2_alt.py  clonehom_nor4_hmck2_alt2.py  clonehom_siggers4_nu.py  clonehom_siggers4_nu_alt.py  clonehom_siggers6_nu.py  free_nu_alg.py  functional_abelian.py  maltsevcond_siggers4_nu.py  maximal_clones.py  minimal_clones.py  minmax_3perm.py  minmax_clones.py  minmax_maltsev.py  olshak2.py  relclone_smp.py  relclone_zalan.py  relcone_smp.py
rust/: bitvec.rs  lib.rs  solver.rs
src/: bitvec.rs  elem.rs  lib.rs  old_bitvec.rs  old_solver.rs  solver.rs
tests/: test_conditions.py  test_contraction.py  test_demo_scripts.py  test_formulas.py  test_oprel.py  test_structure.py
uasat/: __init__.py  __main__.py  _uasat.pyi  algebra.py  clones.py  conditions.py  contract.py  critical_rels.py  domain.py  formulas.py  formulas2.py  operation.py  relation.py  structure.py
