[package]
name = "uasat"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uasat"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["abi3", "abi3-py38"] }
cadical = { version = "0.1" }
