[package]
name = "_uasat"
version = "0.1.1"
authors = ["Miklos Maroti <mmaroti@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_uasat"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["abi3", "abi3-py38"] }
cadical = { version = "0.1" }
