[package]
name = "_uasat"
version = "0.1.2"
description = "A python library for using SAT solvers for universal algebraic research"
authors = ["Miklos Maroti <mmaroti@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/mmaroti/uasat2-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_uasat"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["abi3", "abi3-py39"] }
cadical = { version = "0.1" }
