[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "uasat"
authors = [{ name = "Miklos Maroti", email = "mmaroti@gmail.com" }]
description = "A python library for using SAT solvers for universal algebraic research"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Mathematics",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = ["click"]

[project.scripts]
uasat = "uasat.__main__:cli"

[project.optional-dependencies]
tests = ["pytest"]

[tool.maturin]
module-name = "uasat._uasat"
features = ["pyo3/extension-module"]
strip = true
exclude = ["research/**/*"]
